--- a/index.html
+++ b/index.html
@@ -9,27 +9,36 @@
   <body>
     <main class="stories">
       <article>
-        <img src="./images/iphone-11-pro.jpg" alt="Image" />
+        <img src="./images/iphone-11-pro1.jpg" alt="Image" />
       </article>
       <article>
         <h1>
-          iphone 11 pro 
-          <span class="stock">   Availability:in stock</span><span>&nbsp;&nbsp;</span>
-           <span class="price"> &nbsp;             Price: $1140 &nbsp; </span>
-          </h1>
+          iphone 11 pro
+          <span class="stock"> Availability:In stock</span
+          ><span>&nbsp;&nbsp;</span>
+          <span> </span>
+          <span class="price"> &nbsp; Price: $1140 &nbsp; </span>
+        </h1>
         <p>
           And then there was Pro. A transformative triple camera system that
           adds tonnes of capability without complexity. The first iPhone
           powerful enough to be called Pro.
         </p>
-        <p >
-            <!-- <span class="choose">Choose your color:</span> -->
-            <span class="choose"> <img src="images/choose.jpg" alt="" height="30px" /> </span> <span class="blue"> <img src="images/blue.jpg" alt="" />  </span>
-        <span class="blue"> <img src="images/yellow.jpg" alt="" />  </span>
-         <span class="blue"> <img src="images/grey.jpg" alt="" /> </span></p>
+        <p>
+          <!-- <span class="choose">Choose your color:</span> -->
+          <span class="choose">
+            <img src="images/choose.JPG" alt="" height="30px" />
+          </span>
+          <span class="blue"> <img src="images/blue.jpg" alt="" /> </span>
+          <span class="blue"> <img src="images/yellow.jpg" alt="" /> </span>
+          <span class="blue"> <img src="images/grey.JPG" alt="" /> </span>
+        </p>
         <!-- <p class="blue"><img src="images/blue.jpg" alt="" /></span> <span></span><span></span></p> -->
-        
-        <p class="align"> <input type="submit" value="Buy Now"> <input type="submit" value="Add to Basket"></p> 
+
+        <p class="align">
+          <input type="submit" value="Buy Now" />
+          <input type="submit" value="Add to Basket" />
+        </p>
       </article>
     </main>
   </body>
