--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="stories">
       <article>
-        <img src="./images/iphone-11-pro1.jpg" alt="Image" />
+        <img src="./images/iphone-11-pro.jpg" alt="Image" />
       </article>
       <article>
         <h1>
